--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,11 +6,11 @@
 
 body {
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: radial-gradient(#303b37, #1a1f1d);
-  color: #e1eeeb;
+  background: radial-gradient(#28ecc5, #1a1f1d);
+  color: #fdfcfc;
   min-height: 100vh;
 }
 
@@ -18,7 +18,6 @@ body {
   text-align: center;
   margin: 3rem auto;
 }
-
 
 #header img {
   width: 5rem;
@@ -38,6 +37,9 @@ body {
   border-radius: 4px;
   background: linear-gradient(180deg, #307e6c, #2b996d);
 }
+.abc {
+  margin-bottom: 20px;
+}
 
 .input-group {
   display: flex;
@@ -48,8 +50,8 @@ body {
 #user-input label {
   display: block;
   margin-bottom: 0.25rem;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.5rem;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 0.8rem;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -62,6 +64,13 @@ body {
   background-color: transparent;
   color: #c2e9e0;
   font-size: 1rem;
+}
+button {
+  padding: 10px 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
 #result {
@@ -79,7 +88,7 @@ body {
 }
 
 #result tbody {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 0.85rem;
   color: #c2e9e0;
 }
